@startuml

title __DISPENSER2's Class Diagram__\n

  namespace dispenser2 {
    class dispenser2.Demo {
        {static} + main()
    }
  }
  

  namespace dispenser2 {
    class dispenser2.DrinkDispenser {
        {static} + DRINK_PRICE : int
        + moneyEntered : int
        + DrinkDispenser()
        + askCoffee()
        + askTea()
        + getRefund()
        + giveMoney()
        + setState()
    }
  }
  

  namespace dispenser2 {
    class dispenser2.State {
        + askCoffee()
        + askTea()
        + getRefund()
        + giveMoney()
    }
  }
  

  namespace dispenser2 {
    class dispenser2.StateReadyToServe {
        + StateReadyToServe()
        + askCoffee()
        + askTea()
        - serveDrink()
    }
  }
  

  namespace dispenser2 {
    class dispenser2.StateWaitingForMoney {
        + StateWaitingForMoney()
        + giveMoney()
    }
  }
  

  dispenser2.DrinkDispenser o-- dispenser2.State : state
  dispenser2.StateReadyToServe -up-|> dispenser2.State
  dispenser2.StateWaitingForMoney -up-|> dispenser2.State


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
